# mpi_actions

./: CMakeLists.txt  README.md
.github/workflows/: install_msmpi.ps1  linux.yml  test.ps1  windows.yml
codes/: CMakeLists.txt
codes/app/src/: app.cpp
